Tushar-s-Tomato/manifests/nginx_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    app: tomato
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: tomato.devsecops.tushar
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tomato-clusterip-service
            port:
              number: 80
